import * as React from 'react';
import ProductCard from '../../src/components';
import { product1 } from '../data/product';
import renderer from 'react-test-renderer';

const {act} = renderer;

describe('Priebas en ProductCard', () => { 
    test('debe mostrarse el componente correctamente', () => { 
        const wrapper = renderer.create(
            <ProductCard product={product1} >
                {
                    ()=>(
                        <h1>Product Card</h1>
                    )
                }
            </ProductCard>
        );

        expect(wrapper.toJSON()).toMatchSnapshot();
     });

     test('debe incrementar el contador', () => { 
        const wrapper = renderer.create(
            <ProductCard product={product1} >
                {
                    ({count, increaseBy})=>(
                        <>
                            <h1>Product Card</h1>
                            <span>{count}</span>
                            <button onClick={()=>increaseBy(1)} >+</button>
                        </>
                    )
                }
            </ProductCard>
        );

        let tree = wrapper.toJSON();
        expect(tree).toMatchSnapshot();

        act(()=>{
            (tree as any).children[2].props.onClick();
        });

        tree = wrapper.toJSON();

        expect((tree as any).children[1].children[0]).toBe('1');
      });
 });