// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Priebas en ProductCard debe incrementar el contador 1`] = `
<div
  className="mt-8 w-96 mx-2 md:p-4 p-2 bg-white rounded-3xl undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +
  </button>
</div>
`;

exports[`Priebas en ProductCard debe mostrarse el componente correctamente 1`] = `
<div
  className="mt-8 w-96 mx-2 md:p-4 p-2 bg-white rounded-3xl undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
